bspwm working on ubuntu 16 - xcursor size issue still

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -111,8 +111,8 @@ font-1 = "Iosevka Nerd Font:pixelsize=13;3"
 enable-ipc = true
 cursor-click = pointer
 
-scroll-up = i3wm-wsnext
-scroll-down = i3wm-wsprev
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
 
 ## Module Location ##
 modules-left = menu workspaces google github youtube
@@ -142,8 +142,8 @@ font-1 = "Iosevka Nerd Font:pixelsize=13;3"
 enable-ipc = true
 cursor-click = pointer
 
-scroll-up = i3wm-wsnext
-scroll-down = i3wm-wsprev
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
 
 ## Module Location ##
 modules-left = menu workspaces google github youtube
@@ -167,7 +167,7 @@ click-right = ~/.config/polybar/scripts/color-switch.sh
 ;==========================================================
 
 [module/workspaces]
-type = internal/xworkspaces
+type = internal/bspwm
 pin-workspaces = false
 enable-click = true
 enable-scroll = true
@@ -189,8 +189,8 @@ icon-default = 
 format = <label-state>
 format-background = ${color.shade2}
 label-active = 
-label-occupied = 
 label-urgent = 
+label-occupied = 
 label-empty = 
 
 label-empty-padding = 1
