update to dotfiles, darcula, etc

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -116,8 +116,8 @@ scroll-down = bspwm-deskprev
 
 ## Module Location ##
 modules-left = menu workspaces google github youtube
-modules-right = filesystem mpd pkg volume battery network date powermenu
-
+modules-right = temperature memory cpu volume battery network date powermenu
+# Removed: filesystem 
 ;===========================================================
 ;==HP Monitor Bar==============================================
 ;===========================================================
@@ -146,8 +146,8 @@ scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
 
 ## Module Location ##
-modules-left = menu workspaces google github youtube
-modules-right = temperature cpu memory mpd pkg volume battery network date powermenu
+modules-left = menu workspaces 
+modules-right = volume battery network date powermenu
  
 ;==========================================================
 ;== Modules ===============================================
@@ -352,7 +352,7 @@ label = CPU %percentage%%
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon7/temp1_input
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input
 base-temperature = 20
 warn-temperature = 60
 ;format-background = ${color.shade8}
