--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,9 @@ set -g mouse on
 # allows colors in terminal
 set -g default-terminal "screen-256color"
 
-bind "'" split-window -h
+bind "'"	split-window -h -c '#{pane_current_path}'
+bind '"'	split-window -v -c '#{pane_current_path}'
+bind c		new-window -c '#{pane_current_path}'
 unbind %
 
 bind -n M-h select-pane -L
