updated bspwm config/split apart sections

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -11,8 +11,11 @@
 ;; *modified by Krishna
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[color]
+;==========================================================
+;==Color===================================================
+;==========================================================
 
+[color]
 bg = #1F1F1F
 fg = #FFFFFF
 fg-alt = #A9ABB0
@@ -53,9 +56,8 @@ brown = #6d4c41
 grey = #757575
 blue-gray = #546e7a
 
-
 ;==========================================================
-;==Laptop Bar==============================================
+;== Laptop Bar ============================================
 ;==========================================================
 
 [bar/laptop]
@@ -74,6 +76,7 @@ foreground = ${color.fg}
 
 font-0 = "Fantasque Sans Mono:pixelsize=15;3"
 font-1 = "Iosevka Nerd Font:pixelsize=13;3"
+font-2 = "Font Awesome 5 Brands:pixelsize=15;3"
 
 enable-ipc = true
 cursor-click = pointer
@@ -84,12 +87,12 @@ scroll-down = bspwm-deskprev
 ;scroll-down = i3wm-wsprev
 
 ## Module Location ##
-modules-left = menu workspaces 
+modules-left = menu workspaces google-drive google notion 
 modules-right = temperature cpu memory mpd pkg volume battery network date powermenu
  
-;===========================================================
-;==Acer Monitor Bar==============================================
-;===========================================================
+;==========================================================
+;== Acer Monitor Bar=======================================
+;==========================================================
 
 [bar/monitor1]
 monitor = HDMI-1
@@ -118,9 +121,10 @@ scroll-down = bspwm-deskprev
 modules-left = menu workspaces google github youtube
 modules-right = temperature memory cpu volume battery network date powermenu
 # Removed: filesystem 
-;===========================================================
-;==HP Monitor Bar==============================================
-;===========================================================
+
+;==========================================================
+;== HP Monitor Bar ========================================
+;==========================================================
 
 [bar/monitor2]
 monitor = DP-1-2
@@ -149,9 +153,10 @@ scroll-down = bspwm-deskprev
 modules-left = menu workspaces 
 modules-right = volume battery network date powermenu
  
-;==========================================================
-;== Modules ===============================================
-;==========================================================
+
+;=========================================================
+;== Modules ==============================================
+;=========================================================
 
 [module/menu]
 type = custom/text
@@ -164,7 +169,7 @@ click-left = ~/.config/polybar/scripts/menu
 click-middle = ~/.config/polybar/scripts/menu_full
 click-right = ~/.config/polybar/scripts/color-switch.sh
 
-;==========================================================
+;===============================================================
 
 [module/workspaces]
 type = internal/bspwm
@@ -203,16 +208,47 @@ label-active-foreground = ${color.acolor}
 label-urgent-foreground = ${color.curgent}
 label-occupied-foreground = ${color.coccupied}
 
-;==========================================================
+;===============================================================
+
+[module/notion]
+type = custom/text
+;content =  
+;content =   
+content =  
+content-padding = 2
+content-foreground = ${color.fg-alt}
+click-left = xdg-open https://www.notion.so &
+
+;===============================================================
+
+[module/ballbot-drive]
+type = custom/text
+content = 
+content-padding = 2
+content-foreground = ${color.fg-alt}
+click-left = xdg-open https://www.notion.so &
+
+;===============================================================
 
 [module/google]
 type = custom/text
+label-active-font = 3
 content = 
 content-padding = 2
 content-foreground = ${color.fg-alt}
-click-left = xdg-open https://www.google.com &
+click-left = xdg-open https://www.google.com/ &
 
-;==========================================================
+;===============================================================
+
+[module/google-drive]
+type = custom/text
+label-active-font = 3
+content = 
+content-padding = 2
+content-foreground = ${color.fg-alt}
+click-left = xdg-open https://drive.google.com/drive/my-drive &
+
+;===============================================================
 
 [module/github]
 type = custom/text
@@ -221,7 +257,7 @@ content-padding = 2
 content-foreground = ${color.fg-alt}
 click-left = xdg-open https://www.github.com &
 
-;==========================================================
+;===============================================================
 
 [module/youtube]
 type = custom/text
@@ -230,7 +266,7 @@ content-padding = 2
 content-foreground = ${color.fg-alt}
 click-left = xdg-open https://www.youtube.com &
 
-;==========================================================
+;===============================================================
 
 [module/pkg]
 type = custom/script
@@ -238,8 +274,6 @@ exec = ~/.config/polybar/scripts/updates.sh
 format-background = ${color.shade7}
 format-padding = 2
 tail = true
-
-;===============================================================
 
 [module/battery]
 type = internal/battery
@@ -367,6 +401,7 @@ interval = 5
 format-padding = 2
 label = RAM %gb_used%/%gb_free%
 
+;===============================================================
 
 [module/filesystem]
 type = internal/fs
@@ -382,9 +417,9 @@ label-unmounted-padding = 2
 spacing = 0
 
 
-;===============================================================
-;== Unused Modules ==============================================
-;===============================================================
+;=========================================================
+;== Unused Modules =======================================
+;=========================================================
 
 ;[module/reddit]
 ;type = custom/text
@@ -415,4 +450,4 @@ spacing = 0
 
 ;icon-play = 喇
 ;icon-pause = 
-;
+
