--- a/tmux.conf
+++ b/tmux.conf
@@ -1,29 +1,4 @@
-#### User tmux conf ####
+source ~/.tmux/settings.conf
+source ~/.tmux/plugins.conf
+source ~/.tmux/tpm.conf # Must be sourced last
 
-unbind C-a
-set -g prefix C-a # sets keybind
-bind C-a send-prefix
-unbind C-b # removes the default keybind
-
-# set mouse on
-set -g mouse on
-
-# allows colors in terminal
-set -g default-terminal "screen-256color"
-
-bind "'"	split-window -h -c '#{pane_current_path}'
-bind '"'	split-window -v -c '#{pane_current_path}'
-bind c		new-window -c '#{pane_current_path}'
-unbind %
-
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
-
-# act like vim
-setw -g mode-keys vi
-set -g status-keys vi
-
-# get rid of escape delay in vim
-set -s escape-time 0
