--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -83,8 +83,6 @@ cursor-click = pointer
 
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
 
 ## Module Location ##
 modules-left = menu workspaces google-drive google notion 
@@ -108,8 +106,9 @@ line-size = 2
 background = ${color.bg}
 foreground = ${color.fg}
 
-font-0 = "Fantasque Sans Mono:pixelsize=15;3"
+font-0 = "Fantasque Sans Mono:pixelsize=13;3"
 font-1 = "Iosevka Nerd Font:pixelsize=13;3"
+font-2 = "Font Awesome 5 Brands:pixelsize=15;3"
 
 enable-ipc = true
 cursor-click = pointer
@@ -118,8 +117,8 @@ scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
 
 ## Module Location ##
-modules-left = menu workspaces google github youtube
-modules-right = temperature memory cpu volume battery network date powermenu
+modules-left = menu workspaces google-drive google notion
+modules-right = filesystem memory temperature cpu volume battery network date powermenu
 # Removed: filesystem 
 
 ;==========================================================
@@ -386,7 +385,7 @@ label = CPU %percentage%%
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input
 base-temperature = 20
 warn-temperature = 60
 ;format-background = ${color.shade8}
