--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
 source ~/.tmux/settings.conf
-source ~/.tmux/plugins.conf
+# source ~/.tmux/plugins.conf
 source ~/.tmux/tpm.conf # Must be sourced last
 
