--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,24 +6,26 @@
 
 - link:
     # ~/.dotfiles: ''
-    ~/.bash_aliases: bash_aliases
+    # ~/.bash_aliases: bash_aliases
     ~/.bash_functions: bash_functions
     # ~/.bash_logout: bash_logout
     ~/.bashrc: bashrc
     # ~/.condarc: condarc
     # ~/.config/bspwm: config/bspwm
     # ~/.config/nvim: config/nvim
-    ~/.config/nvim/init.vim: config/nvim/init.vim
+    ~/.config/nvim/init.vim: 
+      create: true
+      path: config/nvim/init.vim
     ~/.config/nvim/settings: config/nvim/settings
     # ~/.config/polybar: config/polybar
     # ~/.config/ranger: config/ranger
     # ~/.config/sxhkd: config/sxhkd
-    ~/.inputrc: inputrc
-    ~/.profile: profile
+    # ~/.inputrc: inputrc
+    # ~/.profile: profile
     ~/.tmux.conf: tmux.conf
     ~/.tmux/tpm.conf: tmux/tpm.conf
     ~/.tmux/settings.conf: tmux/settings.conf
-    ~/.vimrc: vimrc
+    # ~/.vimrc: vimrc
     # ~/.Xresources: Xresources
 
 - shell:
