Remove files that are not specific to nvim init

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,10 +6,10 @@
 
 - link:
     # ~/.dotfiles: ''
-    ~/.bash_aliases: bash_aliases
-    ~/.bash_functions: bash_functions
+    # ~/.bash_aliases: bash_aliases
+    # ~/.bash_functions: bash_functions
     # ~/.bash_logout: bash_logout
-    ~/.bashrc: bashrc
+    # ~/.bashrc: bashrc
     # ~/.condarc: condarc
     # ~/.config/bspwm: config/bspwm
     # ~/.config/nvim: config/nvim
@@ -18,12 +18,12 @@
     # ~/.config/polybar: config/polybar
     # ~/.config/ranger: config/ranger
     # ~/.config/sxhkd: config/sxhkd
-    ~/.inputrc: inputrc
-    ~/.profile: profile
-    ~/.tmux.conf: tmux.conf
-    ~/.tmux/tpm.conf: tmux.conf
-    ~/.tmux/settings.conf: tmux.conf
-    ~/.vimrc: vimrc
+    # ~/.inputrc: inputrc
+    # ~/.profile: profile
+    # ~/.tmux.conf: tmux.conf
+    # ~/.tmux/tpm.conf: tmux.conf
+    # ~/.tmux/settings.conf: tmux.conf
+    # ~/.vimrc: vimrc
     # ~/.Xresources: Xresources
 
 - shell:
