--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,7 +8,7 @@
     # ~/.dotfiles: ''
     ~/.bash_aliases: bash_aliases
     ~/.bash_functions: bash_functions
-    ~/.bash_logout: bash_logout
+    # ~/.bash_logout: bash_logout
     ~/.bashrc: bashrc
     # ~/.condarc: condarc
     # ~/.config/bspwm: config/bspwm
@@ -18,6 +18,7 @@
     # ~/.config/polybar: config/polybar
     # ~/.config/ranger: config/ranger
     # ~/.config/sxhkd: config/sxhkd
+    ~/.git-prompt.sh: git-prompt.sh
     # ~/.inputrc: inputrc
     # ~/.profile: profile
     ~/.tmux.conf: tmux.conf
